--- a/conf/notification/notification.yaml
+++ b/conf/notification/notification.yaml
@@ -1,10 +1,10 @@
-notificator:
-  - name: bot-zoomin
-    type: telegram-bot
-    configuration:
-      bot_token: 774533982:AAGl-fG8u2mfZSz4GwHbcpcVnFHA2oCzIbk
-    recipient_id:
-      - 64767841
-      - -256345304
+#notificator:
+ # - name: bot-zoomin
+  #  type: telegram-bot
+   # configuration:
+    #  bot_token: #####
+    #recipient_id:
+     # - ####
+     # - ####
 
-http_server_port: :4444
+#http_server_port: :4444
